Updated for lab2

--- a/courseMaterial.html
+++ b/courseMaterial.html
@@ -16,7 +16,7 @@ and is wrapped around the whole page content, except for the footer in this exam
 ​
 <!-- Header -->
 <header class="w3-container w3-center w3-padding-32"> 
-  <h1><b>Scott Jenkins</b></h1>
+  <h1><b>Course Material</b></h1>
   <a href="courseMaterial.html">Course material</a>
   <br/>
   <a href="index.html">Home</a>
@@ -30,7 +30,12 @@ and is wrapped around the whole page content, except for the footer in this exam
   <!-- Blog entry -->
   <div class="w3-card-4 w3-margin w3-white">
     <div class="w3-container">
-      <h3><b>Welcome!</b></h3>
-      <h5>  <p>Welcome to my personal site for MODE4201. I'm a 25 year old programming student, in the the third year Computer analysis at Durham College!</p>
+      <h2><b>Course material</b></h3>
+	  <h3><b>Classwork</b></h4>
+	  <h5>Watch this space</h5>
+	  <h3><b>Labs</b></h4>
+	  <h5><a href="lab2.html">Lab2 </a></h5>
+	  <h3><b>Projects</b></h4>
+	  <h5>Watch this space</h5>
 <span class="w3-opacity">September 25, 2020</span></h5>
     </div>
