--- a/index.html
+++ b/index.html
@@ -31,6 +31,12 @@ and is wrapped around the whole page content, except for the footer in this exam
   <div class="w3-card-4 w3-margin w3-white">
     <div class="w3-container">
       <h3><b>Welcome!</b></h3>
-      <h5>  <p>Welcome to my personal site for MODE4201. I'm a 25 year old programming student, in the the third year Computer analysis at Durham College!</p>
+      <h5>  
+		<p>
+			Welcome to my personal site for MODE4201. I'm a 25 year old programming student, in the the third year Computer analysis at Durham College!
+			<br/>
+			The course covers developing Mobile apps, primarily for android devices. It covers coding in java, and XML
+		</p>
+	  </h5>
 <span class="w3-opacity">September 25, 2020</span></h5>
     </div>
